--- a/package.json
+++ b/package.json
@@ -21,14 +21,12 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.2.1",
-    "add": "^2.0.6",
     "class-validator": "^0.14.0",
     "keycloak-connect": "^20.0.3",
     "mongoose": "^6.9.1",
     "nest-keycloak-connect": "^1.9.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0",
-    "yarn": "^1.22.19"
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
